Adds Claude Code

--- a/configs/02-devtools.dsc.yaml
+++ b/configs/02-devtools.dsc.yaml
@@ -73,3 +73,11 @@ properties:
       settings:
         id: Microsoft.VisualStudioCode
         source: winget
+
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: claude
+      directives:
+        description: Install Claude Code
+      settings:
+        id: Anthropic.ClaudeCode
+        source: winget
