--- a/configs/01-base.dsc.yaml
+++ b/configs/01-base.dsc.yaml
@@ -2,4 +2,12 @@
 
 properties:
   configurationVersion: 0.2.0
-  resources: []
+  resources:
+    - resource: Microsoft.WinGet.DSC/WinGetPackage
+      id: powertoys
+      directives:
+        description: Install Windows PowerToys
+      settings:
+        id: Microsoft.PowerToys
+        source: winget
+
